<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RubyChina</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_topics">讨论区</string>
    <string name="menu_active">活跃用户</string>
    <string name="menu_post">发布新话题</string>
    <string name="menu_settings">设置</string>
    <string name="action_subscribe">订阅</string>
    <string name="action_save_subscribe">保存</string>
    <string name="action_register">注册</string>
    <string name="action_save">保存</string>
    <string name="action_send">发送</string>
    <string name="action_follow">关注</string>
    <string name="action_unfollow">取消关注</string>
    <string name="title_subscribe">我的订阅</string>
    <string name="title_nodes">节点订阅</string>
    <string name="hint_user">用户名/邮箱</string>
    <string name="hint_pwd">密码</string>
    <string name="title_login">用户登录</string>
    <string name="footer_retry">加载失败, 点击重试</string>
    <string name="footer_no_more">已无更多</string>
    <string name="loading">加载中</string>
    <string name="drawer_user_not_login">未登录</string>
    <string name="user_tab_title_created">话题</string>
    <string name="user_tab_title_fav">收藏</string>
    <string name="user_tab_title_following">关注</string>
    <string name="user_tab_title_followers">粉丝</string>
    <string name="user_tab_count_format">(%1$s)</string>
    <string name="title_usercenter">用户中心</string>
    <string name="title_image_gallery">%1$s/%2$s</string>
    <string name="title_settings">设置</string>
    <string name="title_comments">评论详情\u0020%1$s/%2$s</string>
    <string name="msg_double_click_exit">再按一次退出</string>
    <string name="title_active_user">活跃用户</string>
    <string name="title_oauth">授权登录</string>
    <string name="title_comment">评论</string>
    <string name="hint_topic_comment">写下你的评论…</string>
    <string name="title_post">发表话题</string>
    <string name="title_choose_node">选择标签</string>
    <string name="title_notification">消息</string>
    <string name="title_userinfo">基本信息</string>
    <string name="register_id">第%1$s号会员</string>
    <string name="userinfo_nickname">昵称</string>
    <string name="userinfo_sequence">序号</string>
    <string name="userinfo_location">所在地</string>
    <string name="userinfo_company">公司</string>
    <string name="userinfo_twitter">Twitter</string>
    <string name="userinfo_web">Web</string>
    <string name="userinfo_github">Github</string>
    <string name="userinfo_email">Email</string>
    <string name="msg_copy_to_clipboard">已经添加到剪贴板</string>
    <string name="menu_open_browser">用外部浏览器打开</string>
    <string name="menu_refresh">刷新</string>
    <string name="cancel">取消</string>
    <string name="logout">退出</string>
    <string name="comment_count_formatter">评论 %1$s</string>
    <string name="topic_comment_count_formatter">全部回复 (%1$s)</string>
    <string name="formatter_read_count_time">%1$s阅读\u0020\u2022\u0020%2$s</string>
    <string name="copied_to_clipboard">已拷贝到剪切板</string>
    <string name="copy_link">复制链接</string>
    <string name="open_with">用浏览器打开</string>
    <string name="refresh">刷新</string>
    <string name="share_via">分享</string>
    <string name="hint_title">标题</string>
    <string name="title_reply_detail">评论详情</string>
    <string name="msg_login_success">登录成功</string>
    <string name="msg_net_error">网络异常</string>
    <string name="msg_net_not_found">资源不存在</string>
    <string name="register_number_formatter">No. %1$s</string>
    <string name="node_all">全部</string>
    <string name="dialog_title_tip">提示</string>
    <string name="dialog_exit_tip">确定退出账号 ?</string>
    <string name="dialog_send">发送</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_ok">确定</string>
    <string name="notification_reply">回复话题</string>
    <string name="notification_new_post">创建话题</string>
    <string name="notification_mention_topic">创建话题提到你</string>
    <string name="notification_mention_reply">回复话题提到你</string>
    <string name="notification_follow_you">关注了你</string>
    <string name="msg_update_token_success">已更新授权，请重试</string>
    <string name="title_about">关于</string>
    <string name="setting_rate">给应用评分</string>
    <string name="setting_about">关于</string>
    <string name="setting_logout">退出账号</string>
    <string name="setting_update">检查更新</string>
    <string name="msg_market_not_installed">手机没有安装应用市场</string>
    <string name="msg_email_client_not_installed">手机没有安装邮箱应用</string>
    <string name="url_app_source">https://github.com/hanji1122/RubyChina</string>
    <string name="url_official_site">https://ruby-china.org</string>
    <string name="email_developer">hanji112@gmail.com</string>
    <string name="setting_recommend">推荐给好友</string>
    <string name="comment_deleted_formatter">%1$s楼\u0020评论已被删除</string>
    <string name="hint_post_content">正文</string>
    <string name="msg_comment_empty">评论内容不能为空</string>
    <string name="dialog_msg_send_comment">发送评论吗?</string>
    <string name="msg_comment_success">评论发布成功</string>
    <string name="formatter_comment_floor_time">%1$s楼\u0020\u2022\u0020%2$s</string>
    <string name="formatter_reply_count_time">%1$s回复\u0020\u2022\u0020%2$s</string>
    <string name="label_recommend">荐</string>
    <string name="nine_nine_plus">99+</string>
    <string name="notification_deleted">相关信息已删除</string>
    <string name="menu_clear">清空</string>
    <string name="select_node">选择节点</string>
    <string name="msg_post_validation_topic">请选择话题节点</string>
    <string name="msg_post_validation_title">请输入标题</string>
    <string name="msg_post_validation_content">请输入正文</string>
    <string name="dialog_msg_post">确认发布该话题吗 ?</string>
    <string name="msg_image_viewer_loading">加载中，请稍等</string>
    <string name="msg_image_viewer_save_fail">保存失败</string>
    <string name="msg_image_viewer_save_success">保存成功 %1$s</string>
    <string name="notification_upload_topic_content">上传帖子内容</string>
    <string name="notification_upload_image_formatter">%1$s/%2$s 图片上传中</string>
    <string name="notification_upload_topic_title">发布帖子</string>
    <string name="notification_upload_topic_success">帖子发布成功</string>
    <string name="notification_upload_retry">发布失败，点击重试</string>
    <string name="msg_upload_waiting">请等待上一条帖子发布成功后再试</string>
    <string name="msg_comment_copied">评论已经复制到剪切板</string>
    <string name="msg_topic_not_exist">该话题已被删除</string>
    <string name="action_post">发表</string>
    <string name="share_title">分享</string>
    <string name="dialog_title_need_login">需要登录</string>
    <string name="dialog_content_need_login">登录账号, 使用更多功能 ?</string>
    <string name="dialog_login">登录</string>
    <string name="msg_no_update">已经是最新版本</string>
    <string name="menu_copy_link">复制链接</string>
    <string name="msg_login_cancel">取消登录</string>
    <string name="title_select_at_user">选择 @ 的用户</string>
    <string name="no_comments">暂无评论</string>
    <string name="about_header_official_site">官网</string>
    <string name="about_header_source_code">源码</string>
    <string name="about_header_contact_developer">联系开发者</string>
    <string name="about_third_app">第三方客户端</string>
    <string name="msg_pls_input_words">请发表您的意见</string>
    <string name="msg_pls_input_email">请输入您的邮箱</string>
    <string name="dialog_title_app_new_update">发现新版本</string>
    <string name="dialog_option_remind_later">以后再说</string>
    <string name="dialog_option_no_remind">不再提示</string>
    <string name="msg_close_auto_update">已关闭应用自动检测更新，可在设置页重新打开</string>
    <string name="dialog_option_update_now">立即更新</string>
    <string name="msg_auth_updated">授权更新成功</string>
    <string name="dialog_msg_comment_loss">评论未发表，退出将丢失</string>
    <string name="dialog_msg_post_loss">话题未发表，退出将丢失</string>
    <string name="dialog_option_exit">退出</string>
    <string name="dialog_title_select_ordering">选择帖子列表的排序规则</string>
    <string name="setting_title_topic_ordering">帖子排序规则</string>
    <string name="setting_use_outer_browser">使用外部浏览器打开链接</string>
    <string name="setting_auto_check_update">自动检查更新</string>
    <string name="share_app_content">推荐你使用 RubyChina 第三方开源客户端，查看链接 https://www.pgyer.com/rubychina
    </string>
    <string name="share_topic_content">https://ruby-china.org/topics/%1$s</string>
    <string name="update_release_notes">版本: %1$s\n\n%2$s</string>
    <string name="dialog_msg_permission_request">为正常使用，应用需要以下权限：存储空间。请允许授权 !</string>
    <string name="next_step">下一步</string>
    <string name="dialog_msg_permission_request_fail">请允许获取权限，否则应用将无法正常使用 !</string>
    <string name="dialog_msg_permission_go_setting">
        <![CDATA[无法获取必要权限，请进入系统设置开启权限再使用，设置路径：\n\n设置->应用程序->RubyChina->权限]]></string>
    <string name="dialog_go_setting">去设置</string>

    <string-array name="select_at_user">
        <item>关注</item>
        <item>粉丝</item>
        <item>活跃</item>
    </string-array>

</resources>
