<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarTitleStyle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-28dp"
                android:background="@color/actionbar"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_about_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/about_third_app"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>
            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.luckyhan.rubychina.widget.SettingElementLayout
                android:id="@+id/about_official_website"
                style="@style/AboutItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentText="@string/url_official_site"
                app:headerText="@string/about_header_official_site"/>

            <include layout="@layout/layout_split_line"/>

            <com.luckyhan.rubychina.widget.SettingElementLayout
                android:id="@+id/about_opensource_site"
                style="@style/AboutItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentText="@string/url_app_source"
                app:headerText="@string/about_header_source_code"/>

            <include layout="@layout/layout_split_line"/>

            <com.luckyhan.rubychina.widget.SettingElementLayout
                android:id="@+id/about_contact"
                style="@style/AboutItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentText="@string/email_developer"
                app:headerText="@string/about_header_contact_developer"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>