<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/root"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/actionbar"
        app:theme="@style/ToolbarStyle"/>

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent">

        <ScrollView android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/emoji_pad"
                    android:fillViewport="true">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">

                <TextView
                    android:id="@+id/select_node"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/nav_light_color"
                    android:padding="8dp"
                    android:text="@string/select_node"
                    android:textSize="@dimen/text_size_medium_large"/>

                <View style="@style/Divider"/>

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/hint_title"
                    android:maxLines="2"
                    android:padding="8dp"
                    android:textSize="@dimen/text_size_medium_large"/>

                <View style="@style/Divider"/>

                <EditText
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/hint_post_content"
                    android:padding="8dp"
                    android:scrollbarStyle="outsideOverlay"
                    android:scrollbars="vertical"
                    android:textSize="@dimen/text_size_medium_large"/>

            </LinearLayout>
        </ScrollView>

        <com.luckyhan.rubychina.ui.emoji.EmojiPad
            android:id="@+id/emoji_pad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:visibility="gone"/>

    </RelativeLayout>

</LinearLayout>